# surface_match_halcon

./: .gitignore  CMakeLists.txt  README.md
data/: model_mesh.ply  model_mm.ply  model_test_1.ply  model_test_2.ply  scene.ply  scene_clear.ply  scene_test_1.ply  scene_test_2.2.ply
data/same_scene/: 0-same-clear.ply  0-same.ply  1-same-clear.ply  1-same.ply  2-same-clear.ply  2-same.ply  3-same-clear.ply  3-same.ply  model_mm.ply
include/: surface_match_h.cpp  surface_match_h.h  surface_match_halcon.hpp
src/: main.cpp
